// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Photo/config.js FILE_CONFIG value metaInfo keyPath should return specific array shape 1`] = `
Array [
  "fileDataStore",
  "files",
  1,
  "metaInfo",
]
`;

exports[`Photo/config.js FILE_CONFIG value photo should return specific array shape 1`] = `
Array [
  "fileDataStore",
  "files",
  1,
  "url",
]
`;
